# platform-hardware-qcom-audio

./: Android.mk  Makefile.am  configure.ac
alsa_sound/: ALSADevice.cpp  ALSAStreamOps.cpp  Android.mk  AudioHardwareALSA.cpp  AudioPolicyManagerALSA.cpp  AudioSessionOut.cpp  AudioStreamOutALSA.cpp  AudioUsbALSA.cpp
configs/apq8098_latv/: apq8098_latv.mk  audio_policy_configuration.xml
configs/atoll/: audio_policy_configuration.xml  mixer_paths.xml  mixer_paths_qrd.xml  mixer_paths_wcd937x.xml  mixer_paths_wcd937xqrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_qrd.xml  sound_trigger_mixer_paths_wcd937x.xml
configs/bengal/: audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_platform_info_scubaidp.xml  bengal.mk  mixer_paths.xml  mixer_paths_qrd.xml  mixer_paths_scubaqrd.xml
configs/common/: audio_policy_configuration.xml
configs/common_au/: audio_policy_configuration.xml
configs/kona/: audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_platform_info_xrfusion.xml  audio_policy_configuration.xml  kona.mk  mixer_paths.xml  mixer_paths_cdp.xml  mixer_paths_qrd.xml  mixer_paths_xrfusion.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_cdp.xml  sound_trigger_mixer_paths_qrd.xml
configs/lito/: audio_platform_info_intcodec.xml  audio_platform_info_lagoon_qrd.xml  audio_platform_info_qrd.xml  audio_policy_configuration.xml  lito.mk  mixer_paths.xml  mixer_paths_cdp.xml  mixer_paths_lagoonmtp.xml  mixer_paths_qrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_cdp.xml  sound_trigger_mixer_paths_qrd.xml
configs/msm8909/: audio_platform_info.xml  audio_platform_info_fp.xml  audio_policy_configuration.xml  mixer_paths_wtp.xml  msm8909.mk
configs/msm8937/: audio_platform_info.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_platform_info_sdm429w_dvt2.xml  audio_policy_configuration.xml  audio_policy_configuration_a2dp.xml  mixer_paths_sdm429_qrd.xml  mixer_paths_sdm429w.xml  mixer_paths_wtp.xml  msm8937.mk
configs/msm8953/: msm8953.mk  sound_trigger_platform_info.xml
configs/msm8996/: audio_effects.conf  audio_effects.xml  audio_io_policy.conf  audio_output_policy.conf  audio_platform_info.xml  audio_platform_info_i2s.xml  audio_policy.conf  audio_policy_configuration.xml  eavb_audio_policy_configuration.xml  mixer_paths.xml  mixer_paths_i2s.xml  msm8996.mk  sound_trigger_mixer_paths.xml  sound_trigger_platform_info.xml
configs/msm8998/: audio_platform_info.xml  audio_policy_configuration.xml  mixer_paths_skuk.xml  mixer_paths_skus.xml  mixer_paths_tasha.xml  mixer_paths_tavil.xml  msm8998.mk
configs/msmnile/: audio_platform_info.xml  audio_policy_configuration.xml  mixer_paths_tavil.xml  msmnile.mk  sound_trigger_mixer_paths_wcd9340.xml  sound_trigger_platform_info.xml
configs/msmnile_au/: audio_effects.xml  audio_io_policy.conf  audio_platform_info.xml  audio_policy_configuration.xml  card-defs.xml  mixer_paths.xml  mixer_paths_adp.xml  mixer_paths_custom.xml  msmnile_au.mk  sound_trigger_platform_info.xml
configs/msmsteppe/: audio_policy_configuration.xml  mixer_paths_idp.xml  mixer_paths_qrd.xml  mixer_paths_tavil.xml  mixer_paths_wcd9375.xml  mixer_paths_wcd9375qrd.xml  msmsteppe.mk  sound_trigger_platform_info.xml
configs/msmsteppe_au/: audio_io_policy.conf  audio_platform_info.xml  audio_policy_configuration.xml  mixer_paths_adp.xml  mixer_paths_custom.xml  msmsteppe_au.mk  sound_trigger_mixer_paths.xml  sound_trigger_platform_info.xml
configs/sdm660/: audio_platform_info.xml  audio_platform_info_extcodec.xml  audio_platform_info_skush.xml  mixer_paths.xml  mixer_paths_i2s.xml  mixer_paths_mtp.xml  mixer_paths_skush.xml  sdm660.mk
configs/sdm670/: sdm670.mk
configs/sdm710/: audio_platform_info.xml  audio_platform_info_intcodec.xml  mixer_paths_tavil.xml  sdm710.mk  sound_trigger_mixer_paths.xml  sound_trigger_platform_info.xml  (+1 more)
hal/: Android.mk  Makefile.am  acdb.c  acdb.h  ahal_config_helper.cpp  ahal_config_helper.h  audio-anc-ext.h  audio_hal_plugin.h  audio_hw.c  audio_hw.h  audio_hw_extn_api.c  audio_hw_extn_api.h  audio_perf.h  edid.c  platform_api.h  platform_info.c  qahw_intf.c  voice.c  voice.h
hal-qal/: Android.mk  AudioDevice.cpp  AudioStream.cpp  AudioStream.h  Makefile.am
hal/audio_extn/: Android.mk  Makefile.am  a2dp.c  a2dp_sink.c  adsp_hdlr.c  adsp_post_proc_extn.c  afe_loopback.c  anc.c  audio_defs.h  audio_extn.c  audio_extn.h  audio_feature_manager.c  audio_feature_manager.h  audio_hidl.cpp  auto_hal.c  auto_hal.h  compress_in.c  dolby.c  ext_audio_anc.c  ext_hw_plugin.c  ffv.c  fm.c  gef.c  haptic.c  hfp.c  hw_loopback.c  icc.c  ip_hdlr_intf.c  ip_hdlr_intf.h  keep_alive.c  maxxaudio.c  passthru.c  pm.c  qaf.c  qap.c  qti_audio_extn.c  qti_audio_extn.h  qti_audio_extn_internal.h  sndmonitor.c  soundtrigger.c  (+8 more)
hdmi_in_test/: Makefile.am
libalsa-intf/: alsa_ucm.c
mpq8064/: ALSADevice.cpp  AudioBitstreamSM.cpp  AudioBroadcastStream.cpp  AudioHardwareALSA.cpp  AudioPolicyManagerALSA.cpp  AudioSessionOut.cpp  AudioStreamInALSA.cpp  AudioStreamOutALSA.cpp
policy_hal/: Android.mk  AudioPolicyManager.cpp  AudioPolicyManager.h  AudioUtil.c  AudioUtil.h
post_proc/: Android.mk  Makefile.am  adsp_post_proc.c  adsp_post_proc.h  auto_bmt.c  auto_bmt.h  auto_bundle.c  auto_bundle.h  auto_delay.c  auto_delay.h  auto_effect_util.c  auto_effect_util.h  auto_fnb.c  auto_fnb.h  auto_volume.c  auto_volume.h  bass_boost.c  bundle.c  effect_api.c  effect_util.c  equalizer.c  virtualizer.c  volume_listener.c
qahw/: Android.mk  Makefile.am
qahw_api/: Android.mk  Makefile.am
qahw_api/test/: Makefile.am  afe_loopback_test.c  qahw_effect_test.c  qahw_multi_record_test.c  qahw_playback_test.c  qahw_playback_test.h  qahw_voice_test.c  qahw_voice_test.h  qap_wrapper_extn.c  trans_loopback_test.c
standalone_test_app/: Makefile.am  amrnbtest.c  amrwbplustest.c  amrwbtest.c  audiotest_def.h  ion_alloc.c  ion_alloc.h
vhal_helper/: Android.mk
visualizer/: Android.mk  offload_visualizer.c
voice_processing/: Android.mk  voice_processing.c
(+60 files in other folders)
